modify src path

--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
 
 <body>
   <div class="hero-container">
-    <img src="/-img/hero/hero-sp.webp" class="hero-img" alt="">
+    <img src="-img/hero/hero-sp.webp" class="hero-img" alt="">
     <div class="hero-info">
-      <img src="/-img/hero/scroll.svg" alt="↓" width="20vw">
+      <img src="-img/hero/scroll.svg" alt="↓" width="20vw">
       <!-- 公式サイトへの移動 キャンセルできるように -->
       <a href="https://www.komabasai.net/75/visitor/project/431" onclick="alert('駒場祭公式サイトの企画ページに移動します')">
-        <img src="/-img/logo/kf75_logo+type.svg" alt="駒場祭">
+        <img src="-img/logo/kf75_logo+type.svg" alt="駒場祭">
       </a>
       <div>
         <a href="#schedule">
-          <img src="/-img/hero/date.svg" class="hero-info-date" alt="">
+          <img src="-img/hero/date.svg" class="hero-info-date" alt="">
         </a>
         <a href="#place">
-          <img src="/-img/hero/place.svg" class="hero-info-place" alt="">
+          <img src="-img/hero/place.svg" class="hero-info-place" alt="">
         </a>
       </div>
     </div>
     <div class="hero-sns">
       <a href="https://utcr.github.io/">
-        <img src="/-img/logo/UTCr_logo-type-gray.svg" class="utcr_logo-type" alt="">
+        <img src="-img/logo/UTCr_logo-type-gray.svg" class="utcr_logo-type" alt="">
       </a>
       <!-- <span>on</span> -->
       <div class="sns">
         <!-- <span>Follow UTCr</span> -->
         <div class="sns_logos">
-          <a href="https://x.com/utokyo_cr"><img src="/-img/logo/sns_logo_x-black.svg" alt="X" id="sns_logo_x"></a>
-          <a href="https://instagram.com/utokyo_cr"><img src="/-img/logo/sns_logo_ig-black.svg" alt="IG" id="sns_logo_ig"></a>
-          <a href="https://youtube.com/utokyo_cr"><img src="/-img/logo/sns_logo_yt-black.svg" alt="IG" id="sns_logo_yt"></a>
+          <a href="https://x.com/utokyo_cr"><img src="-img/logo/sns_logo_x-black.svg" alt="X" id="sns_logo_x"></a>
+          <a href="https://instagram.com/utokyo_cr"><img src="-img/logo/sns_logo_ig-black.svg" alt="IG" id="sns_logo_ig"></a>
+          <a href="https://youtube.com/utokyo_cr"><img src="-img/logo/sns_logo_yt-black.svg" alt="IG" id="sns_logo_yt"></a>
         </div>
       </div>
     </div>
@@ -47,7 +47,7 @@
 
 
   <section id="story">
-    <img src="/-img/phrase2.svg"  class="phrase-img" alt="誰かを、笑顔にすることってできますか？">
+    <img src="-img/phrase2.svg"  class="phrase-img" alt="誰かを、笑顔にすることってできますか？">
     <!-- <div class="phrase">
     </div> -->
     <div class="story_text">
@@ -59,17 +59,17 @@
   </section>
 
   <div class="sceneImages">
-    <img src="/-img/scenes/sea2.png" alt="">
-    <img src="/-img/scenes/piano0.png" alt="">
-    <img src="/-img/scenes/forest.png" alt="">
-    <img src="/-img/scenes/sea1.png" alt="">
+    <img src="-img/scenes/sea2.png" alt="">
+    <img src="-img/scenes/piano0.png" alt="">
+    <img src="-img/scenes/forest.png" alt="">
+    <img src="-img/scenes/sea1.png" alt="">
   </div>
 
 
   <section>
     <h2>登場人物</h2>
     <div class="char">
-      <img src="/-img/character/hero.png" alt="主人公" class="char_img">
+      <img src="-img/character/hero.png" alt="主人公" class="char_img">
       <div class="char_text">
         <div class="char_name">主人公</div>
         <div class="char_descr">大学一年生。音楽で人や物を自在に操る「感性の力」を持もつ。彩花を喜ばせるため、不器用ながら一生懸命になる。</div>
@@ -80,10 +80,10 @@
         <div class="char_name">彩花（ヒロイン）</div>
         <div class="char_descr">主人公と高校からの同級生。幼い頃に色彩を失い、白黒の世界に生きる。</div>
       </div>
-      <img src="/-img/character/ayaka.png" alt="彩花" class="char_img">
+      <img src="-img/character/ayaka.png" alt="彩花" class="char_img">
     </div>
     <div class="char">
-      <img src="/-img/character/senpai.png" alt="先輩" class="char_img">
+      <img src="-img/character/senpai.png" alt="先輩" class="char_img">
       <div class="char_text">
         <div class="char_name">先輩</div>
         <div class="char_descr">主人公の通う大学の2年生。自身も「感性の力」を持っており、主人公に声をかける。</div>
@@ -93,7 +93,7 @@
 
   <section id="schedule">
     <h2>上映スケジュール</h2>
-    <img src="/-img/timetable.jpg" alt="上演スケジュール" class="img-normal">
+    <img src="-img/timetable.jpg" alt="上演スケジュール" class="img-normal">
   </section>
 
   <section id="place">
@@ -102,12 +102,12 @@
       <h3>駒場キャンパス</h3>
       <span class="infoStrong">東京大学 駒場Iキャンパス</span>
       <span class="infoText">京王井の頭線「駒場東大前」駅直結</span>
-      <img src="/-img/map/map_komaba.webp" alt="駒場東大前駅までのアクセスマップ" class="img-normal">
+      <img src="-img/map/map_komaba.webp" alt="駒場東大前駅までのアクセスマップ" class="img-normal">
     </div>
     <div class="place_bild12">
       <h3>上映会場</h3>
       <span class="infoStrong">12号館 2階 1221教室</span>
-      <img src="/-img/map/map_bldg12.jpg" alt="駒場12号館へのアクセスマップ" class="img-normal">
+      <img src="-img/map/map_bldg12.jpg" alt="駒場12号館へのアクセスマップ" class="img-normal">
       <div class="infoText
       ">
         <a href="https://www.komabasai.net/75/3dmap/?building=bldg12" class="link">
@@ -124,7 +124,7 @@
 
   <section id="producer">
     <h2>制作</h2>
-    <img src="/-img/logo/UTCr_logo.png" alt="" class="biglogo">
+    <img src="-img/logo/UTCr_logo.png" alt="" class="biglogo">
     <div class="infoStrong">東大クリエイティ部 UTCr</div>
     <div class="infoText">
       東京大学駒場キャンパスを拠点とし、映像制作を中心に、既存のジャンルにとらわれない多様な制作を行うクリエイティブ集団です。
@@ -138,16 +138,16 @@
 
       <div class="footer_flex">
         <div class="footer_title">
-          <img src="/-img/logo/UTCr_logo-type-gray.svg" alt="UTCr logo" class="footer_title_logo">
+          <img src="-img/logo/UTCr_logo-type-gray.svg" alt="UTCr logo" class="footer_title_logo">
           <!-- <span class="footer_title_text">UTCr</span> -->
         </div>
   
         <div class="sns">
           <!-- <span>Follow UTCr</span> -->
           <div class="sns_logos">
-            <a href="https://x.com/utokyo_cr"><img src="/-img/logo/sns_logo_x-black.svg" alt="X" id="sns_logo_x"></a>
-            <a href="https://instagram.com/utokyo_cr"><img src="/-img/logo/sns_logo_ig-black.svg" alt="IG" id="sns_logo_ig"></a>
-            <a href="https://youtube.com/utokyo_cr"><img src="/-img/logo/sns_logo_yt-black.svg" alt="IG" id="sns_logo_yt"></a>
+            <a href="https://x.com/utokyo_cr"><img src="-img/logo/sns_logo_x-black.svg" alt="X" id="sns_logo_x"></a>
+            <a href="https://instagram.com/utokyo_cr"><img src="-img/logo/sns_logo_ig-black.svg" alt="IG" id="sns_logo_ig"></a>
+            <a href="https://youtube.com/utokyo_cr"><img src="-img/logo/sns_logo_yt-black.svg" alt="IG" id="sns_logo_yt"></a>
           </div>
         </div>
       </div>
