--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>きみを染める旋律は - UTCr 2024駒場祭企画</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"><meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@UTokyo_Cr">
+  <meta name="twitter:title" content="きみを染める旋律は UTCr駒場祭映画">
+  <meta name="twitter:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
+  <meta name="twitter:image" content="thumb.webp">
+  
 </head>
 
 
