--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
   
 
 
-  <meta data-n-head="1" data-hid="og:site_name" property="og:site_name" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
-  <meta data-n-head="1" data-hid="og:title" property="og:title" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
-  <meta data-n-head="1" data-hid="og:type" property="og:type" content="website">
-  <meta data-n-head="1" data-hid="og:url" property="og:url" content="https://utcr.github.io/kf75cinema/">
-  <meta data-n-head="1" data-hid="og:description" property="og:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
-  <meta data-n-head="1" data-hid="og:image" property="og:image" content="htpps://utcr.github.io/kf75cinema/thumb.webp">
-  <meta data-n-head="1" property="twitter:card" content="summary_large_image">
-  <link data-n-head="1" rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta data-hid="og:site_name" property="og:site_name" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
+  <meta data-hid="og:title" property="og:title" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
+  <meta data-hid="og:type" property="og:type" content="website">
+  <meta data-hid="og:url" property="og:url" content="https://utcr.github.io/kf75cinema/">
+  <meta data-hid="og:description" property="og:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
+  <meta data-hid="og:image" property="og:image" content="htpps://utcr.github.io/kf75cinema/thumb.webp">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   
-  <!-- <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@UTokyo_Cr">
   <meta name="twitter:title" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
   <meta name="twitter:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
-  <meta name="twitter:image" content="thumb.webp"> -->
+  <meta name="twitter:image" content="thumb.webp">
   
 </head>
 
