modify twitter img link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:site" content="@UTokyo_Cr">
   <meta name="twitter:title" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
   <meta name="twitter:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
-  <meta name="twitter:image" content="thumb.webp">
+  <meta name="twitter:image" content="https://utcr.github.io/kf75cinema/thumb.webp">
   
 </head>
 
