og:image modify

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta data-hid="og:type" property="og:type" content="website">
   <meta data-hid="og:url" property="og:url" content="https://utcr.github.io/kf75cinema/">
   <meta data-hid="og:description" property="og:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
-  <meta data-hid="og:image" property="og:image" content="htpps://utcr.github.io/kf75cinema/thumb.webp">
+  <meta data-hid="og:image" property="og:image" content="https://utcr.github.io/kf75cinema/thumb.webp">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <meta name="twitter:card" content="summary_large_image">
