--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   
 
 
-  <meta data-hid="og:site_name" property="og:site_name" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
-  <meta data-hid="og:title" property="og:title" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
-  <meta data-hid="og:type" property="og:type" content="website">
-  <meta data-hid="og:url" property="og:url" content="https://utcr.github.io/kf75cinema/">
-  <meta data-hid="og:description" property="og:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
-  <meta data-hid="og:image" property="og:image" content="https://utcr.github.io/kf75cinema/thumb.webp">
+  <meta property="og:site_name" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
+  <meta property="og:title" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://utcr.github.io/kf75cinema/">
+  <meta property="og:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
+  <meta property="og:image" content="https://utcr.github.io/kf75cinema/thumb.webp?241115">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <meta name="twitter:card" content="summary_large_image">
