--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://utcr.github.io/kf75cinema/">
   <meta property="og:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
-  <meta property="og:image" content="https://utcr.github.io/kf75cinema/thumb.webp?241115">
+  <meta property="og:image" content="https://utcr.github.io/kf75cinema/thumb_1200.webp?241115">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@UTokyo_Cr">
   <meta name="twitter:title" content="映画「きみを染める旋律は」UTCr 駒場祭2024">
   <meta name="twitter:description" content="東大クリエイティ部第一回作品「きみを染める旋律は」 駒場祭にて上映！ 11/22-24 @東京大学駒場キャンパス">
-  <meta name="twitter:image" content="https://utcr.github.io/kf75cinema/thumb.webp">
+  <meta name="twitter:image" content="https://utcr.github.io/kf75cinema/thumb_1200.webp">
   
 </head>
 
