--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
   </section>
 
   <div class="sceneImages">
-    <img src="-img/scenes/sea2.png" alt="">
-    <img src="-img/scenes/piano0.png" alt="">
-    <img src="-img/scenes/forest.png" alt="">
-    <img src="-img/scenes/sea1.png" alt="">
+    <img src="-img/scenes/sea2.webp" alt="">
+    <img src="-img/scenes/piano0.webp" alt="">
+    <img src="-img/scenes/forest.webp" alt="">
+    <img src="-img/scenes/sea1.webp" alt="">
   </div>
 
 
