modify media query

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 
 <body>
   <div class="hero-container">
-    <img src="-img/hero/hero-sp.webp" class="hero-img" alt="">
+    <img src="-img/hero/hero-sp.webp" class="hero-img-sp" alt="きみを染める旋律は">
+    <img src="-img/hero/hero-pc.webp" alt="きみを染める旋律は" class="hero-img-pc">
     <div class="hero-info">
-      <img src="-img/hero/scroll.svg" alt="↓" width="20vw">
+      <img src="-img/hero/scroll.svg" alt="↓" width="20vw" class="scrollArrow">
       <!-- 公式サイトへの移動 キャンセルできるように -->
       <a href="https://www.komabasai.net/75/visitor/project/431" onclick="alert('駒場祭公式サイトの企画ページに移動します')">
         <img src="-img/logo/kf75_logo+type.svg" alt="駒場祭">
