--- a/index.html
+++ b/index.html
@@ -109,6 +109,38 @@
     </div>
   </section>
 
+  <section id="projectInfo">
+    <h2>企画情報</h2>
+
+    <div style="text-align: right; margin-bottom: 1rem;">
+      ▶︎
+      <a href="https://www.komabasai.net/75/visitor/project/431" onclick="alert('駒場祭公式サイトの企画ページに移動します')" class="link">駒場祭公式サイト 企画詳細ページ</a>
+    </div>
+
+    <img src="-img/projectInfo.svg" alt="" class="projectInfo_img">
+    <div class="infoText">
+      東京大学駒場キャンパス ▶︎<a href="#place" class="link">アクセス</a>
+    </div>
+
+
+    <div class="posters">
+      <div class="poster">
+        <a href="-img/flyer/flyer_jp.JPG">
+          <img src="-img/flyer/flyer_jp.webp" alt="ポスター（日本語）">
+          <div class="infoText">ポスター（日本語）</div>
+        </a>
+      </div>
+      <div class="poster">
+        <a href="-img/flyer/flyer_en.JPG">
+          <img src="-img/flyer/flyer_en.webp" alt="ポスター（英語）">
+          <div class="infoText">ポスター（英語）</div>
+        </a>
+      </div>
+    </div>
+
+
+  </section>
+
   <section id="schedule">
     <h2>上映スケジュール</h2>
     <img src="-img/timetable.jpg" alt="上演スケジュール" class="img-normal">
