--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="sns_logos">
           <a href="https://x.com/utokyo_cr"><img src="-img/logo/sns_logo_x-black.svg" alt="X" id="sns_logo_x"></a>
           <a href="https://instagram.com/utokyo_cr"><img src="-img/logo/sns_logo_ig-black.svg" alt="IG" id="sns_logo_ig"></a>
-          <a href="https://youtube.com/utokyo_cr"><img src="-img/logo/sns_logo_yt-black.svg" alt="IG" id="sns_logo_yt"></a>
+          <a href="https://youtube.com/@utokyo_cr"><img src="-img/logo/sns_logo_yt-black.svg" alt="IG" id="sns_logo_yt"></a>
         </div>
       </div>
     </div>
@@ -197,7 +197,7 @@
           <div class="sns_logos">
             <a href="https://x.com/utokyo_cr"><img src="-img/logo/sns_logo_x-black.svg" alt="X" id="sns_logo_x"></a>
             <a href="https://instagram.com/utokyo_cr"><img src="-img/logo/sns_logo_ig-black.svg" alt="IG" id="sns_logo_ig"></a>
-            <a href="https://youtube.com/utokyo_cr"><img src="-img/logo/sns_logo_yt-black.svg" alt="IG" id="sns_logo_yt"></a>
+            <a href="https://youtube.com/@utokyo_cr"><img src="-img/logo/sns_logo_yt-black.svg" alt="IG" id="sns_logo_yt"></a>
           </div>
         </div>
       </div>
